= Changelog of devonfw-ide

This file documents all notable changes to https://github.com/devonfw/ide[devonfw-ide].

== 2023.08.002

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1198[#1198]: Ability to download custom software from mounted filesystem
* https://github.com/devonfw/ide/issues/1197[#1197]: Integrate Java Mission Control
* https://github.com/devonfw/ide/issues/1320[#1320]: Fix Bug in intellij documenation

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/48?closed=1[milestone 2023.08.002].

== 2023.08.001

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1297[#1297]: doFail from debugging in productive code prevents MacOS installations

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/47?closed=1[milestone 2023.08.001].

== 2023.07.003

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1287[#1287]: initial setup fails because urls is not cloned
* https://github.com/devonfw/ide/issues/1279[#1279]: Improve rancher-desktop support and solve VPN issue
* https://github.com/devonfw/ide/issues/1252[#1252]: Docker not working on linux
* https://github.com/devonfw/ide/issues/1295[#1295]: Docker setup failing on MacOS
* https://github.com/devonfw/ide/issues/1247[#1247]: Fix Jenkins, SonarQube, Jasypt is not working without args
* https://github.com/devonfw/ide/issues/1246[#1246]: Fix yarn installation
* https://github.com/devonfw/ide/issues/1283[#1283]: checksum verification prevents intellij plugin installation
* https://github.com/devonfw/ide/issues/1276[#1276]: checksum verification for custom software repository
* https://github.com/devonfw/ide/issues/1285[#1285]: Complete alignment of tool-names in scripts
* https://github.com/devonfw/ide/issues/1164[#1164]: devon jenkins stop fails
